corrected container overflowing body by changing min-width/min-height to just width/height

--- a/static/styles.css
+++ b/static/styles.css
@@ -3,8 +3,8 @@ body, html{
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
-    min-width: 100vw;
-    min-height: 100vh;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -48,7 +48,6 @@ i:hover{
     background-color: rgba(106, 100, 146, 0.9);
     text-align: center;
     justify-content: center;
-    max-width: 100vw;
     padding: 5vw;
     margin: 5vw
 }
